--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,6 +10,8 @@ import /init.${ro.hardware}.rc
 import /vendor/etc/init/hw/init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
+# Include our extra init file
+import /init.jdc.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
